k8s/django-deployment-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-deployment-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: django
  ports:
    - port: 8000
      targetPort: 8000
