k8s/media-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: media-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: media
  ports:
    - port: 80
      targetPort: 80
